# ALSRAC

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Makefile  README.md  alu4_14_0.000263672_2492_13.1.blif  batch.sh  batch_aem.sh  batch_epfl_aem.sh  batch_epfl_er.sh  batch_epfl_random.sh  batch_fpga.sh  batch_iscas_aem.sh  batch_iscas_er.sh  c17.blif  c6288.blif  cavlc_39_0.023623_1006_13.6.blif  cnf\pj1_if6_mfs000.cnf  configure.sh  count.py  sim_out.blif  test-64.csv  test-mfs.csv  test.blif  test.dot  test.py  test.sh  trace.cnf
appntk/: alu4_0_0.000146484_2419_20.blif  alu4_0_0_2468_19.7.blif  alu4_0_0_2477_17.9.blif  alu4_0_0_2588_13.blif  alu4_100_0.0281348_1731_20.7.blif  alu4_101_0.0281738_1709_18.2.blif  alu4_102_0.0283105_1706_18.3.blif  alu4_103_0.028457_1705_20.6.blif  alu4_104_0.0286035_1701_17.6.blif  alu4_105_0.0287598_1708_18.3.blif  alu4_106_0.0289453_1698_20.3.blif  alu4_107_0.0291504_1664_17.4.blif  alu4_108_0.0293262_1635_16.3.blif  alu4_109_0.0293262_1635_17.8.blif  alu4_10_0.000146484_2541_12.7.blif  alu4_10_0.00113281_2357_19.blif  alu4_10_0_2429_18.blif  alu4_10_0_2430_19.1.blif  alu4_110_0.029541_1625_17.9.blif  alu4_111_0.0296191_1635_16.9.blif  alu4_112_0.0298535_1633_16.9.blif  alu4_113_0.030127_1621_16.9.blif  alu4_114_0.0304199_1616_17.8.blif  alu4_115_0.0307227_1614_16.9.blif  alu4_116_0.0310254_1608_16.6.blif  alu4_117_0.0313574_1610_18.8.blif  alu4_118_0.0314746_1587_18.2.blif  (+8936 more)
core/: CMakeLists.txt
core/src/: cktBit.h  cktUtil.h  cmdline.h  dcals.cpp  espressoApi.h  main.cpp  simulatorPro.cpp  simulatorPro.h
(+34652 files in other folders)
